--- a/src/app/description/description.component.css
+++ b/src/app/description/description.component.css
@@ -6,7 +6,7 @@
     background-image: ('assets\71l6aEDzaFS.jpg');
     background-size: cover;
   } */
-  .i{
+  .card{
     display: flex;
     align-items: left;
     justify-content: left;
