--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="i">
+<div class="card">
   <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
