--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
  
  
 <section class="example-container mat-elevation-z8" tabindex="0">
-  <table mat-table [dataSource]="dataSource | async">
+  <table mat-table [dataSource]="dataSource ">
 
     
     <ng-container matColumnDef="id" sticky>
