--- a/src/app/fav-cmp/fav-cmp.component.html
+++ b/src/app/fav-cmp/fav-cmp.component.html
@@ -33,7 +33,7 @@
       
         <th mat-header-cell *matHeaderCellDef>Favourite </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button ><mat-icon class="star">star_outline</mat-icon>
+          <button mat-button (click)="favFunc(element)" ><mat-icon class="star">{{element.fav ? 'star': 'star_outline'}}</mat-icon>
           </button>
         </td>
       </ng-container>
