--- a/src/app/fav-cmp/fav-cmp.component.html
+++ b/src/app/fav-cmp/fav-cmp.component.html
@@ -1,7 +1,7 @@
 
 
 <section class="example-container mat-elevation-z8" tabindex="0">
-    <table mat-table [dataSource]="dataSource | async" >
+    <table mat-table [dataSource]="dataSource " >
       
   
       
