--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <div id="div" >
-   <div id="image"> <img src="\assets\Muraai_Logo.webp" alt="image"></div>
+   <div id="image"> <img src="https://w7.pngwing.com/pngs/606/201/png-transparent-mississauga-library-system-school-library-public-library-online-public-access-catalog-library-miscellaneous-trademark-logo-thumbnail.png" alt="image"></div>
    
 
 
-<h1 sample>Muraai Information Technologies</h1>
+<h1 sample>Muraai Library</h1>
   <button class="addbutton" mat-button (click)="addPerson()"  *ngIf="loggedIn$ | async" appHighlight>Add</button> <div class="example-sidenav-content">
    <button *ngIf="loggedIn$ | async" id="namebutton" mat-stroked-button [matMenuTriggerFor]="menu">{{firstName | titlecase }}{{lastName | titlecase }}</button>
    <mat-menu #menu="matMenu" class="menu">
